--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "ember-data": "1.0.0-beta.11",
     "ember-export-application-global": "^1.0.0",
     "express": "^4.8.5",
-    "glob": "^4.0.5"
+    "glob": "^4.0.5",
+    "inflection": "^1.5.3",
+    "lodash-node": "^2.4.1",
+    "mkdirp": "^0.5.0"
   },
   "description": "The default blueprint for ember-cli addons.",
   "keywords": [
@@ -38,5 +41,11 @@
   ],
   "ember-addon": {
     "configPath": "tests/dummy/config"
+  },
+  "dependencies": {
+    "fs-extra": "^0.12.0",
+    "path": "^0.4.9",
+    "walk-sync": "^0.1.3",
+    "rsvp": "3.0.16"
   }
 }
