--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "start": "ember server",
     "build": "ember build",
-    "test": "ember test"
+    "test": "./node_modules/mocha/bin/mocha --timeout 8000 --reporter spec tests/**/*-test.js tests/**/*/*-test.js tests/**/*/*/*-test.js"
   },
   "repository": "",
   "engines": {
@@ -17,24 +17,25 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "body-parser": "^1.2.0",
-    "broccoli-asset-rev": "0.3.1",
+    "broccoli-asset-rev": "^2.0.0",
     "broccoli-ember-hbs-template-compiler": "^1.6.1",
-    "chalk": "^0.5.1",
-    "ember-cli": "0.1.2",
+    "chai": "^1.10.0",
+    "ember-cli": "0.1.7",
+    "ember-cli-6to5": "0.2.1",
     "ember-cli-content-security-policy": "0.3.0",
-    "ember-cli-dependency-checker": "0.0.6",
-    "ember-cli-esnext": "0.1.1",
+    "ember-cli-dependency-checker": "0.0.7",
     "ember-cli-ic-ajax": "0.1.1",
     "ember-cli-inject-live-reload": "^1.3.0",
-    "ember-cli-qunit": "0.1.0",
-    "ember-data": "1.0.0-beta.11",
+    "ember-cli-qunit": "0.1.2",
+    "ember-data": "1.0.0-beta.12",
     "ember-export-application-global": "^1.0.0",
     "express": "^4.8.5",
     "glob": "^4.0.5",
     "inflection": "^1.5.3",
     "lodash-node": "^2.4.1",
-    "mkdirp": "^0.5.0"
+    "mkdirp": "^0.5.0",
+    "mocha": "^2.1.0",
+    "quick-temp": "^0.1.2"
   },
   "description": "The default blueprint for ember-cli addons.",
   "keywords": [
